// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker not render clean icon when allowClear is false 1`] = `
<div
  class="ant-picker"
>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="Select time"
      readonly=""
      size="10"
      title="00:00:00"
      value="00:00:00"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimePicker prop locale should works 1`] = `
Array [
  <div
    class="ant-picker"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select time"
        readonly=""
        size="10"
        title="00:00:00"
        value="00:00:00"
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-picker-clear"
        role="button"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-picker-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-picker-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-picker-panel-container"
    >
      <div
        class="ant-picker-panel-layout"
      >
        <div
          class="ant-picker-panel ant-picker-panel-focused"
          tabindex="-1"
        >
          <div
            class="ant-picker-time-panel"
          >
            <div
              class="ant-picker-content"
            >
              <ul
                class="ant-picker-time-panel-column"
                style="position: relative;"
              >
                <li
                  class="ant-picker-time-panel-cell ant-picker-time-panel-cell-selected"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    00
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    01
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    02
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    03
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    04
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    05
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    06
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    07
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    08
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    09
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    10
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    11
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    12
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    13
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    14
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    15
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    16
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    17
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    18
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    19
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    20
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    21
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    22
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    23
                  </div>
                </li>
              </ul>
              <ul
                class="ant-picker-time-panel-column"
                style="position: relative;"
              >
                <li
                  class="ant-picker-time-panel-cell ant-picker-time-panel-cell-selected"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    00
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    01
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    02
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    03
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    04
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    05
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    06
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    07
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    08
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    09
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    10
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    11
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    12
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    13
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    14
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    15
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    16
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    17
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    18
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    19
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    20
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    21
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    22
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    23
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    24
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    25
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    26
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    27
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    28
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    29
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    30
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    31
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    32
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    33
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    34
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    35
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    36
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    37
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    38
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    39
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    40
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    41
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    42
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    43
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    44
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    45
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    46
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    47
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    48
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    49
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    50
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    51
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    52
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    53
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    54
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    55
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    56
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    57
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    58
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    59
                  </div>
                </li>
              </ul>
              <ul
                class="ant-picker-time-panel-column"
                style="position: relative;"
              >
                <li
                  class="ant-picker-time-panel-cell ant-picker-time-panel-cell-selected"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    00
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    01
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    02
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    03
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    04
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    05
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    06
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    07
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    08
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    09
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    10
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    11
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    12
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    13
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    14
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    15
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    16
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    17
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    18
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    19
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    20
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    21
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    22
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    23
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    24
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    25
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    26
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    27
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    28
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    29
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    30
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    31
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    32
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    33
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    34
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    35
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    36
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    37
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    38
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    39
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    40
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    41
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    42
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    43
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    44
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    45
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    46
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    47
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    48
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    49
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    50
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    51
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    52
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    53
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    54
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    55
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    56
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    57
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    58
                  </div>
                </li>
                <li
                  class="ant-picker-time-panel-cell"
                >
                  <div
                    class="ant-picker-time-panel-cell-inner"
                  >
                    59
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="ant-picker-footer"
          >
            <ul
              class="ant-picker-ranges"
            >
              <li
                class="ant-picker-now"
              >
                <a
                  class="ant-picker-now-btn"
                >
                  Now
                </a>
              </li>
              <li
                class="ant-picker-ok"
              >
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    OK
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TimePicker rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="Select time"
      readonly=""
      size="10"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimePicker should support bordered 1`] = `
<div
  class="ant-picker ant-picker-borderless custom-class"
>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="Select time"
      readonly=""
      size="10"
      title="00:00:00"
      value="00:00:00"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-picker-clear"
      role="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
